--- a/lle/lle.ipynb
+++ b/lle/lle.ipynb
@@ -253,6 +253,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# E ora un po' di codice ..."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
