update notebook and pptx

--- a/lle/lle.ipynb
+++ b/lle/lle.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Locally Linear Embedding (LLE)"
+    "# Locally Linear Embedding"
    ]
   },
   {
@@ -12,9 +12,11 @@
    "metadata": {},
    "source": [
     "(Roweis & Saul, 2000) <br>\n",
-    "LLE è un metodo per la riduzione della dimensionalità, che può essere usato per manifold embedding e feature extraction. <br>\n",
+    "\n",
+    "LLE è un metodo non-lineare per la riduzione della dimensionalità, che può essere usato per manifold embedding e feature extraction. <br>\n",
     "Mira a preservare la struttura dei dati: punti vicini nello spazio iniziale saranno essere vicini anche nello spazio finale, puntando anche ad allontanare ulteriormente i punti lontani. <br>\n",
-    "I dati ad alta dimensionalità spesso seguono una struttura curva a bassa dimensionalità, ed è qui che algoritmi come LLE danno i loro risultati migliori."
+    "\n",
+    "I dati ad alta dimensionalità spesso seguono una struttura curva (o in generale non-lineare) a bassa dimensionalità, come Swiss Roll o la Spirale Logaritmica, ed è qui che algoritmi come LLE danno i loro risultati migliori."
    ]
   },
   {
@@ -86,10 +88,13 @@
     "Un grafo dei vicini (kNN graph) è formato usando la distanza euclidea tra coppie di punti, quindi ogni punto avrà $ k $ vicini.\n",
     "<br>\n",
     "\n",
-    "Indichiamo con $ \\large x_{ij} \\in \\mathbb R^d $ il j-esimo vicino di $ x_i $ <br>\n",
+    "Indichiamo il j-esimo vicino di $ x_i $ con \n",
+    "$$\n",
+    "\\large x_{ij} \\in \\mathbb R^d \n",
+    "$$  <br>\n",
     "e i vicini di $ x_i $ con \n",
     "$$\n",
-    "\\large N_i := [ x_{i1}, \\dots, x_{ik} ] \\quad ( d \\times k )\n",
+    "\\large N_i := \\begin{bmatrix} x_{i1} & \\dots & x_{ik} \\end{bmatrix} \\quad ( d \\times k )\n",
     "$$ <br>\n"
    ]
   },
@@ -104,7 +109,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "L'obiettivo di questo step è trovare i pesi per la linear reconstruction di ogni punto a partire dai suoi kNN. <br>\n",
+    "L'obiettivo di questo step è trovare la matrice dei pesi che minimizza l'errore per la ricostruzione di ogni punto a partire dai suoi kNN. <br>\n",
     "\n",
     "Vogliamo esprimere $ x_i $ come somma pesata dei suoi $ k $ vicini\n",
     "\n",
@@ -127,10 +132,11 @@
     "Per trovare i pesi corretti, dobbiamo minimizzare l'errore:\n",
     "\n",
     "$$\n",
-    "\\large \\left\\| x_i - \\sum_{j \\in N_i}w_{ij}x_j \\right\\|^2\n",
+    "\\large \\text {minimize: } \\left\\| x_i - \\sum_{j \\in N_i}w_{ij}x_j \\right\\|^2\n",
     "$$\n",
     "\n",
     "Dichiariamo ora una nuova matrice nella quale prendo i vicini di $ x_i $ e gli sottraggo $ x_i $:\n",
+    "\n",
     "$$\n",
     "\\large \\mathbf Z_i \\leftarrow \\begin{bmatrix} (x_1 - x_i) & \\dots & (x_j - x_i) & \\dots & (x_k - x_i) \\end{bmatrix}\n",
     "\\quad ( d \\times k )\n",
@@ -142,7 +148,12 @@
     "\\large \\mathbf w_i = \\dfrac{\\mathbf G_i^{-1}\\mathbf 1}{\\mathbf 1^\\top \\mathbf G_i^{-1}\\mathbf 1}\n",
     "$$\n",
     "\n",
-    ", dove $ \\large \\mathbf G_i $ è una matrice di Gram (simmetrica reale) così ottenuta $ \\large \\mathbf G_i = \\mathbf Z_i^\\top \\mathbf Z_i \\quad ( k \\times k )$\n",
+    ", dove $ \\large \\mathbf G_i $ è una matrice di Gram (simmetrica reale) così ottenuta \n",
+    "\n",
+    "$$\n",
+    "\\large \\mathbf G_i = \\mathbf Z_i^\\top \\mathbf Z_i \\quad ( k \\times k )\n",
+    "$$\n",
+    "\n",
     "<br>\n",
     "\n",
     "Ogni punto è ora ricostruibile usando i pesi."
@@ -159,8 +170,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Nel secondo step abiamo trovato i pesi per la linear reconstruction, quindi non abbiamo più bisogno degli input. \n",
-    "Fissiamo i pesi e cerchiamo $ \\mathbf y_i $, ovvero le coordinate di dimensionalità ridotta. <br>\n",
+    "Nel secondo step abiamo trovato i pesi per la linear reconstruction, quindi non abbiamo più bisogno degli input. <br>\n",
+    "Fissiamo i pesi e cerchiamo $ \\mathbf y_i $, ovvero le coordinate di dimensionalità ridotta che minimizzano il reconstruction error. <br>\n",
     "Lo scopo è quindi di \"embeddare\" i dati in uno spazio dimensionale più piccolo usando gli stessi pesi dello spazio di input. <br>"
    ]
   },
@@ -174,9 +185,9 @@
     "\\large y_i \\approx \\sum_{j \\in N_i}w_{ij}y_j\n",
     "$$\n",
     "\n",
-    "Definiamo la matrice dei pesi $ \\large \\mathbf W \\quad ( n \\times n ) $\n",
+    "Definiamo la matrice dei pesi \n",
     "\n",
-    "$$\n",
+    "$$ \\large \\mathbf W \\quad ( n \\times n ) \\quad , \\quad\n",
     "\\large\n",
     "   w_{ij} =\n",
     "    \\left\\{\n",
@@ -201,10 +212,10 @@
     "Ogni riga $ \\mathbf Y_i $ è l'embedding nello spazio ridotto del punto, trasposto ($ p $ dimensionale)\n",
     "\n",
     "\n",
-    "Abbiamo un problema di ottimizzazione, in cui vogliamo minimizzare, al fine di ottenere $ \\mathbf Y $:\n",
+    "Abbiamo un problema di ottimizzazione in cui vogliamo minimizzare il \"reconstruction error\", per ottenere $ \\mathbf Y $:\n",
     "\n",
     "$$\n",
-    "\\large \\sum_{i} \\left\\| y_i - \\sum_{j \\in N_i}w_{ij}x_y \\right\\|^2\n",
+    "\\large \\text {minimize: } \\sum_{i} \\left\\| y_i - \\sum_{j \\in N_i}w_{ij}x_y \\right\\|^2\n",
     "$$\n",
     "\n",
     "Abbiamo 2 vincoli da rispettare (per rendere possibili i passaggi matematici del procedimento):\n",
@@ -217,13 +228,27 @@
     "Consideriamo infine la matrice $ \\mathbf M $:\n",
     "\n",
     "$$\n",
-    "\\large \\mathbf M = ( \\mathbf I - \\mathbf W )^\\top ( \\mathbf I - \\mathbf W )\n",
+    "\\large \\mathbf M = ( \\mathbf I - \\mathbf W )^\\top ( \\mathbf I - \\mathbf W ) \\quad ( n \\times n )\n",
     "$$\n",
     "\n",
-    "Di essa calcoliamo autovalori e autovettori, che saranno le colonne della matrice finale (a ridotta dimensionalità).<br><br>\n",
-    "Dato che il problema originario era di minimizzazione, dovremo prima ordinare gli autovettori in base al relativo autovalore (dal più piccolo al più grande).\n",
-    "Ignoriamo il primo (avendo autovalore pari a zero) e consideriamo i successivi $ p $ autovettori con autovalori non nulli, che saranno le colonne di \n",
-    "$ \\large \\mathbf Y \\in \\mathbb R^{n \\times p} $"
+    "<br>\n",
+    "\n",
+    "Di essa calcoliamo <b>autovalori</b> e <b>autovettori</b> al fine di estrarre le $ p $ componenti principali.<br>\n",
+    "\n",
+    "$$\n",
+    "\\large \\lambda_0 \\dots \\lambda_n \\quad e \\quad \\mathbf v_0 \\dots \\mathbf v_n \\quad di \\quad \\mathbf M\n",
+    "$$\n",
+    "\n",
+    "La matrice $ \\mathbf M $ è una matrice $ ( n \\times n ) $ che ha, in generale, $ n $ autovalori. <br>\n",
+    "Ordiniamo gli autovettori in base all'autovalore dal più piccolo al più grande, in quanto il problema originario era di minimizzazione, e scartiamo il primo, dato che è pari a zero.<br>\n",
+    "\n",
+    "Consideriamo quindi i successivi $ p $ autovettori con autovalori non nulli, che saranno le colonne di \n",
+    "$ \\large \\mathbf Y \\in \\mathbb R^{n \\times p} $\n",
+    "<br>\n",
+    "\n",
+    "$$\n",
+    "\\large \\mathbf Y \\leftarrow \\begin{bmatrix} \\mathbf v_1 & \\dots & \\mathbf v_n \\end{bmatrix}\n",
+    "$$"
    ]
   },
   {
@@ -237,17 +262,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font size=\"4\">\n",
+    "<font size=\"3\">\n",
     "\n",
-    "- abbiamo in input i nostri $ n $ punti\n",
-    "- per ogni $ x_i $ :\n",
+    "- input: $ \\{  x_i \\in \\mathbb R^d \\}^n_{i=1} $\n",
+    "    <br><br>\n",
+    "- $ \\forall x_i $ :\n",
+    "    <br><br>\n",
     "  - trovo $ N_i $\n",
     "  - $ \\mathbf Z_i \\leftarrow \\begin{bmatrix} \\dots & x_j - x_i & \\dots \\end{bmatrix} $\n",
     "  - $ \\mathbf G_i \\leftarrow \\mathbf Z_i^\\top \\mathbf Z_i $\n",
     "  - $ \\mathbf w_i \\leftarrow \\dfrac{\\mathbf G_i^{-1}\\mathbf 1}{\\mathbf 1^\\top \\mathbf G_i^{-1}\\mathbf 1} $\n",
-    "- troviamo la matrice dei pesi $ \\mathbf W $\n",
+    "    <br><br>\n",
+    "- costruisco $ \\mathbf W $\n",
+    "    <br><br>\n",
     "- $ \\mathbf M \\leftarrow ( \\mathbf I - \\mathbf W )^\\top ( \\mathbf I - \\mathbf W ) $\n",
-    "- troviamo autovettori $ \\mathbf v_1 \\dots \\mathbf v_n $ della matrice $ \\mathbf M $, ordinati in base all'autovalore\n",
+    "    <br><br>\n",
+    "- $ \\lambda_0 \\dots \\lambda_n \\enspace e \\enspace \\mathbf v_0 \\dots \\mathbf v_n \\enspace di \\enspace \\mathbf M $, ordinati in base a $ \\lambda_i $\n",
+    "    <br><br>\n",
     "- $ \\mathbf Y \\leftarrow \\begin{bmatrix} \\mathbf v_1 & \\dots & \\mathbf v_n \\end{bmatrix} $\n",
     "\n",
     "</font>"
@@ -262,12 +293,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "pycharm": {
-     "is_executing": true
-    }
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
