--- a/lle/lle.ipynb
+++ b/lle/lle.ipynb
@@ -293,8 +293,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "is_executing": true
+    }
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -1757,6 +1761,28 @@
     "\n",
     "neighbors = 50\n",
     "elabora_lle_2c_mnist(X_mnist, neighbors)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Fonti:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " - https://www.stat.cmu.edu/~cshalizi/350/lectures/14/lecture-14.pdf\n",
+    " - https://arxiv.org/pdf/2011.10925.pdf\n",
+    " - https://medium.com/analytics-vidhya/locally-linear-embedding-lle-data-mining-b956616d24e9#_=_\n",
+    " - https://scikit-learn.org/stable/auto_examples/manifold/plot_compare_methods.html#sphx-glr-auto-examples-manifold-plot-compare-methods-py\n",
+    " - https://scikit-learn.org/stable/auto_examples/manifold/plot_swissroll.html#sphx-glr-auto-examples-manifold-plot-swissroll-py\n",
+    " - https://www.youtube.com/watch?v=BfsHsFcO8O0&list=PL_4Jjqx0pZY-PoZRwgf1zbi4xtY2tlv0h\n",
+    " - https://www.youtube.com/watch?v=GzVj4e0-DUA&list=PL_4Jjqx0pZY-PoZRwgf1zbi4xtY2tlv0h\n",
+    " - https://www.youtube.com/watch?v=4Zk2UFGIrd0\n",
+    " "
    ]
   }
  ],
