update notebook and pptx

--- a/lle/lle.ipynb
+++ b/lle/lle.ipynb
@@ -13,8 +13,8 @@
    "source": [
     "(Roweis & Saul, 2000) <br>\n",
     "\n",
-    "LLE è un metodo non-lineare per la riduzione della dimensionalità, che può essere usato per manifold embedding e feature extraction. <br>\n",
-    "Mira a preservare la struttura dei dati: punti vicini nello spazio iniziale saranno essere vicini anche nello spazio finale, puntando anche ad allontanare ulteriormente i punti lontani. <br>\n",
+    "LLE è un metodo non-lineare che permette di ridurre la dimensionalità di un dataset, e può essere usato per manifold embedding e feature extraction. <br>\n",
+    "Mira a preservare la struttura dei dati: punti vicini nello spazio iniziale saranno vicini anche nello spazio finale, puntando inoltre ad allontanare ulteriormente i punti lontani. <br>\n",
     "\n",
     "I dati ad alta dimensionalità spesso seguono una struttura curva (o in generale non-lineare) a bassa dimensionalità, come Swiss Roll o la Spirale Logaritmica, ed è qui che algoritmi come LLE danno i loro risultati migliori."
    ]
@@ -293,12 +293,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "is_executing": true
-    }
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
